Closed Bug 1715726 Opened 3 years ago Closed 3 years ago

With `Display Attachments Inline`, attached email message shows no message headers in inline preview

Categories

(Thunderbird :: Message Reader UI, defect, P2)

Thunderbird 90

Tracking

(thunderbird91+ fixed)

RESOLVED FIXED
92 Branch
Tracking Status
thunderbird91 + fixed

People

(Reporter: Jules, Assigned: darktrojan)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.1.1 Safari/605.1.15

Steps to reproduce:

Ensure "View -> Display Attachments Inline" is ticked in menus.
Open a message which contains a forwarded-as-attachment message.

Actual results:

The forwarded-as-attachment message body is shown, but now does not even show the Subject: line of it, let alone the From or To headers.

Expected results:

Prior to Thunderbird 90.0b1, it showed the Subject: From: and To: headers immediately above the body of the forwarded-as-attachment message.

Indeed, thanks for reporting this.
Confirming exactly as described for TB 90.0b1, Win10.

Severity: -- → S3
Status: UNCONFIRMED → NEW
Component: Untriaged → Message Reader UI
Ever confirmed: true
Priority: -- → P3
Keywords: regression
Priority: P3 → P2
Summary: Show forwarded message attachment inline shows no headers → With `Display Attachments Inline`, attached email message shows no headers in inline preview

Confirmed also for Daily 91.0a1 (2021-06-28) (64-bit) - Magnus, could you assign this to someone?
Not showing the message header of an attached message in message reader's inline preview is quite a significant loss of context which negatively impacts the usefulness of Display attachments inline for email messages.

Flags: needinfo?(mkmelin+mozilla)
Summary: With `Display Attachments Inline`, attached email message shows no headers in inline preview → With `Display Attachments Inline`, attached email message shows no message headers in inline preview

Alice, can you please find the regression for us. I guess the STR are pretty clear from comment #0. The header display is put together in some MIME code, so it's surprising this would have changed.

Flags: needinfo?(alice0775)

Thank you so much, Alice. Indeed, MIME changes that put the message together.

Flags: needinfo?(geoff)
Flags: needinfo?(mkmelin+mozilla)
Regressed by: 1711408
Assignee: nobody → geoff
Status: NEW → ASSIGNED
Flags: needinfo?(geoff)

Nice, inline display of message/rfc822 attachments shows the headers again, but it's impossible to check printing since this either hangs on the preview or crashes completely. Maybe that's bug 1720397 or bug 1714639.

I checked printing as one of those bugs has a patch to prevent the crash. All is good.

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/882bf054ad43
Fix display of the headers of attached messages in inline preview. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch

Comment on attachment 9231090 [details]
Bug 1715726 - Fix display of the headers of attached messages in inline preview. r=mkmelin

[Approval Request Comment]
Regression caused by (bug #): bug 1711408 made changes to the message stylesheet that did too much
User impact if declined: message attachments displayed inline have no headers
Testing completed (on c-c, etc.): tested in comment 7
Risk to taking this patch (and alternatives if risky): low, I just changed the stylesheet and added a class to some elements, worst case is it's still broken

Attachment #9231090 - Flags: approval-comm-beta?

Comment on attachment 9231090 [details]
Bug 1715726 - Fix display of the headers of attached messages in inline preview. r=mkmelin

[Triage Comment]
Approved for beta

Attachment #9231090 - Flags: approval-comm-beta? → approval-comm-beta+

This still seems to be a problem, for me, in MacOS build Daily 2021-07-17, which seems odd, if it was pushed 3 days ago?

I'm still not seeing the fix, as of 0719; is it just me?

Blocks: 1721232

thanks Rob.

Confirming comment 12, that on macOS with Thunderbird 92.0a1 (2019-07-19) the headers are not displayed. It does work on Linux. Opened Bug 1721232 for macOS.

Regressions: 1736244
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: