Bug 1715726 - Fix display of the headers of attached messages in inline preview. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D119841

--HG--
extra : rebase_source : c1d9ba58c0aab5cc14883d4f43fab9e06de1a756